--- a/src/app/dashboard/mycourses/createcourse/lessonspage/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/lessonspage/page.module.css
@@ -1,26 +1,126 @@
 .mainDiv {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f5f5f5;
 }
 
 .addLessonDiv {
   width: 100%;
   display: flex;
   flex-direction: row;
-  background-color: purple;
+  padding-left: 8vw;
+  margin-top: 1vh;
 }
 
 .addLessonButton {
   border-radius: 20px;
-  padding: 2vh 2vw;
+  padding: 1.5vh 1.5vw;
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
   font-family: "The Seasons", serif;
-  font-size: 1.2vw;
+  font-size: 1.4vw;
   border: none;
   outline: none;
   cursor: pointer;
+}
+.addLessonButton:hover {
+  background: #1e6fbd;
+}
+
+.mainTitle {
+  font-family: "The Seasons", serif;
+  font-size: 2.5vw;
+  color: #001623;
+  margin-top: 2s.5vh;
+  text-align: center;
+}
+
+.searchContainer {
+  padding-left: 12vw;
+  margin-top: 1.8vh;
+  width: 100%;
+  height: 8vh;
+  display: flex;
+  flex-direction: row;
+}
+
+.inputRow {
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  width: 30%;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  outline: none;
+  height: 100%;
+  font-size: 1.3rem;
+  font-family: "The Seasons", serif;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.inputRow img {
+  margin-left: 3%;
+  width: 2.3vw;
+  height: 5vh;
+}
+
+.searchInput {
+  margin-left: 1vw;
+  border: none;
+  width: 100%;
+  outline: none;
+  height: 100%;
+  font-size: 1.3rem;
+  font-family: "The Seasons", serif;
+  background: transparent;
+}
+.father {
+  padding-top: 2vh;
+  box-sizing: border-box;
+  width: 100%;
+  height: 68vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 1.5vh;
+  overflow-y: auto;
+}
+.emptyDiv {
+  width: 20px;
+  height: 100%;
+
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  background-color: #aac8de;
+}
+.lessonsContainer {
+  width: 80%;
+  height: 100%;
+  background-color: #aac8de;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+
+  padding-bottom: 3vh;
+  padding-left: 2vw;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  box-sizing: border-box;
+}
+
+.lessonsContainer::-webkit-scrollbar {
+  border-radius: 5px;
+  background-color: rgb(239, 235, 235);
+  width: 12px;
+}
+.lessonsContainer::-webkit-scrollbar-thumb {
+  background-color: #283f4f;
+  border-radius: 5px;
 }
