--- a/src/app/dashboard/mycourses/createcourse/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/page.module.css
@@ -12,6 +12,7 @@
 
 /* Contenedor del formulario */
 .form {
+  margin-top: 3vh;
   width: 60vw;
   height: 100%;
   background-color: #f5f5f5;
@@ -20,7 +21,6 @@
   flex-direction: column;
   background-color: white;
   border-radius: 30px;
-  margin-top: 3vh;
 }
 
 /* Título principal */
@@ -29,8 +29,7 @@
   font-size: 2.5vw;
   font-weight: bold;
   color: #001623;
-  margin-top: 1vh;
-  margin-bottom: 4vh;
+
   text-align: center;
 }
 
@@ -75,7 +74,6 @@
   border: none;
   outline: none;
   color: white;
-  margin-bottom: 1vh;
   resize: none;
 }
 
@@ -194,11 +192,12 @@
 
 /* Botones */
 .form_actions {
+  padding-top: 3vh;
   width: 100%;
 
   height: 30%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .formButton {
@@ -219,7 +218,7 @@
 
 .uploadCourseButton {
   border-radius: 2vw;
-  margin-top: 2vh;
+  margin-top: 1vh;
   width: 40%;
   height: 7vh;
   background: linear-gradient(to right, #5cd2ff, #004aad);
