--- a/src/app/dashboard/mycourses/createcourse/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/page.module.css
@@ -46,7 +46,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 2vh;
 }
 
 /* Input del formulario */
@@ -101,7 +100,7 @@
 
 .imagen_portada_section {
   width: 100%;
-  height: 40%;
+  height: 30%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -110,8 +109,8 @@
 }
 
 .imagen_portada_section img {
-  width: 30vh;
-  height: 20vh;
+  width: 33vw;
+  height: 16vh;
   object-fit: cover;
 }
 
@@ -122,13 +121,14 @@
   flex-direction: row;
   align-items: center;
   gap: 1vw;
+
+  background-color: orange;
 }
 
 .imagen_preview {
-  width: 32%;
+  width: 33%;
   height: 90%;
   border-radius: 20px;
-  margin-left: 8vh;
 }
 
 /* Botón de imagen */
@@ -202,8 +202,8 @@
 
 .formButton {
   border-radius: 2vw;
-  padding-top: 1vh;
-  width: 30%;
+
+  width: 50%;
   height: 5vh;
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
@@ -215,6 +215,25 @@
   cursor: pointer;
   margin-left: 1vw;
 }
+.inputURL {
+  border-radius: 2vw;
+  width: 100%;
+  height: 7vh;
+  background-color: #a3d4f3;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1vw;
+  border: none;
+  outline: none;
+  color: white;
+  text-align: center;
+}
+
+.inputURL::placeholder {
+  color: white;
+}
+.inputURL:hover {
+  background-color: #1e6fbd;
+}
 
 .uploadCourseButton {
   border-radius: 2vw;
@@ -224,7 +243,8 @@
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
   text-align: center;
-  font-family: "Montserrat", serif;
+  font-family: "The Seasons", serif;
+
   font-size: 1.3rem;
   border: none;
   outline: none;
@@ -234,6 +254,24 @@
   background: #1e6fbd;
 }
 
+.updateImageButton {
+  border-radius: 2vw;
+
+  width: 50%;
+  height: 7vh;
+  background: linear-gradient(to right, #5cd2ff, #004aad);
+  color: white;
+  text-align: center;
+  font-family: "The Seasons", serif;
+  font-size: 1.2vw;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.updateImageButton:hover {
+  background: #1e6fbd;
+}
 .formButtonBack {
   border-radius: 2vw;
   width: 12%;
