--- a/src/app/dashboard/mycourses/createcourse/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/page.module.css
@@ -31,6 +31,7 @@
   color: #001623;
 
   text-align: center;
+  margin-bottom: 3vh;
 }
 
 /* Etiquetas */
@@ -241,7 +242,7 @@
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
   text-align: center;
-  font-family: "The Seasons", serif;
+  font-family: "Montserrat", serif;
 
   font-size: 1.3rem;
   border: none;
