--- a/src/app/dashboard/mycourses/createcourse/lessonspage/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/lessonspage/page.module.css
@@ -177,11 +177,11 @@
 
 .noLessonsDiv {
   background-color: transparent;
-
-  width: 45%;
-  height: 60%;
+  width: 60%;
+  height: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   border-radius: 20px;
 }
@@ -189,7 +189,7 @@
   text-align: center;
   align-items: center;
   font-weight: 300;
-  font-size: 1.8rem;
+  font-size: 2vw;
 }
 
 .noLessonsImage {
