--- a/src/app/dashboard/coursepage/page.module.css
+++ b/src/app/dashboard/coursepage/page.module.css
@@ -1,4 +1,150 @@
 .fatherDiv {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  scrollbar-gutter: stable;
+}
+.courseTitleDiv {
+  padding-left: 1vw;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.arrowImage {
+  width: 3vw;
+  height: 80%;
+  border-radius: 10px;
+  background-color: #aac8de;
+}
+
+.arrowImage:hover {
+  border-radius: 10px;
+  background: #1e6fbd;
+}
+
+.mainTitle {
+  margin-left: 1.5vw;
+  font-family: "The Seasons", serif;
+  font-size: 2.5vw;
+  color: #001623;
+}
+
+.mainDiv {
+  width: 100%;
+  height: 90%;
+  padding: 1.5vw;
+  padding-top: 10vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.videoContainer {
+  margin-top: 2vh;
+  width: 60vw;
+  height: 68vh;
+
+  display: flex;
+  flex-direction: column;
+}
+.videoDisplay {
+  width: 100%;
+  height: 85%;
+  background-color: black;
+}
+.courseDescriptionDiv {
+  display: flex;
+  flex-grow: 1;
+
+  align-items: center;
+}
+.courseDescription {
+  margin-left: 1vw;
+  font-family: "The Seasons", serif;
+  font-size: 1.5vw;
+  color: #001623;
+}
+
+.father {
+  width: 35vw;
+  height: 100%;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.LessonsDiv {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  background-color: #aac8de;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  padding-top: 3vh;
+  overflow-y: auto;
+  border-radius: 30px;
+}
+
+.LessonsDiv::-webkit-scrollbar {
+  border-radius: 5px;
+  background-color: rgb(239, 235, 235);
+  width: 12px;
+}
+.LessonsDiv::-webkit-scrollbar-thumb {
+  background-color: #283f4f;
+  border-radius: 5px;
+}
+
+.lessonCard {
+  background-color: #fff;
+  border-radius: 50px;
+  height: 10vh;
+  width: 80%;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.lessonCard:hover {
+  background: rgb(103, 103, 103);
+  color: white;
+  cursor: pointer;
+}
+
+.lessonCardSelected {
+  background: #1e6fbd;
+  border-radius: 50px;
+  height: 10vh;
+  width: 80%;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.lessonCardSelected:hover {
+  background: linear-gradient(to right, #5cd2ff, #004aad);
+  color: white;
+  cursor: pointer;
+}
+
+.lessonTitle {
+  font-size: 1.5vw;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; /* Agrega los puntos suspensivos */
 }
